grammars/noir/test/corpus/functions.txt
==================
Basic function
==================

fn foo() {}

---

(source_file
  (function_definition
    name: (identifier)
    (parameters)
    (block)))

==================
Function with parameters
==================

fn add(x: u32, y: u32) -> u32 {
    x + y
}

---

(source_file
  (function_definition
    name: (identifier)
    (parameters
      (parameter
        (pattern (identifier))
        (primitive_type))
      (parameter
        (pattern (identifier))
        (primitive_type)))
    return_type: (primitive_type)
    (block
      (binary_expression
        left: (identifier)
        right: (identifier)))))

==================
Public function
==================

pub fn public_func() {}

---

(source_file
  (function_definition
    (visibility_modifier)
    name: (identifier)
    (parameters)
    (block)))

==================
Function with pub parameter
==================

fn main(x: u32, y: pub u32) {}

---

(source_file
  (function_definition
    name: (identifier)
    (parameters
      (parameter
        (pattern (identifier))
        (primitive_type))
      (parameter
        (pattern (identifier))
        (visibility_modifier)
        (primitive_type)))
    (block)))

==================
Unconstrained function
==================

unconstrained fn unsafe_op() {}

---

(source_file
  (function_definition
    name: (identifier)
    (parameters)
    (block)))

==================
Comptime function
==================

comptime fn compile_time() {}

---

(source_file
  (function_definition
    name: (identifier)
    (parameters)
    (block)))

==================
Function with attribute
==================

#[test]
fn test_something() {}

---

(source_file
  (function_definition
    (attribute
      (attribute_item (identifier)))
    name: (identifier)
    (parameters)
    (block)))

==================
Function with generic parameters
==================

fn generic<T>(x: T) -> T {
    x
}

---

(source_file
  (function_definition
    name: (identifier)
    (type_parameters
      (type_parameter
        name: (type_identifier)))
    (parameters
      (parameter
        (pattern (identifier))
        (type_identifier)))
    return_type: (type_identifier)
    (block
      (identifier))))

==================
Function with where clause
==================

fn constrained<T>(x: T) where T: Default {}

---

(source_file
  (function_definition
    name: (identifier)
    (type_parameters
      (type_parameter
        name: (type_identifier)))
    (parameters
      (parameter
        (pattern (identifier))
        (type_identifier)))
    (where_clause
      (where_predicate
        (type_identifier)
        (trait_bounds (type_identifier))))
    (block)))
